--- a/Software/package.json
+++ b/Software/package.json
@@ -19,7 +19,11 @@
     "adonis-lucid": "^3.0.14",
     "adonis-middleware": "^1.0.11",
     "adonis-websocket": "^1.0.3",
+    "csrf": "^3.0.6",
     "fs-extra": "^3.0.0",
+    "node-cookie": "^2.0.0",
+    "node-csp": "^1.0.1",
+    "node-guard": "^1.0.0",
     "sqlite3": "^3.1.8",
     "website-scraper": "^2.4.0",
     "youch": "^2.0.4"
