--- a/Software/package.json
+++ b/Software/package.json
@@ -18,11 +18,13 @@
     "adonis-framework": "^3.0.10",
     "adonis-lucid": "^3.0.14",
     "adonis-middleware": "^1.0.11",
+    "adonis-validation-provider": "^3.0.5",
     "adonis-websocket": "^1.0.3",
     "csrf": "^3.0.6",
     "fs-extra": "^3.0.0",
     "node-cookie": "^2.0.0",
     "node-csp": "^1.0.1",
+    "node-exceptions": "^2.0.2",
     "node-guard": "^1.0.0",
     "sqlite3": "^3.1.8",
     "website-scraper": "^2.4.0",
